Refactor content on value creation: Update definitions, examples, and context in chapters 1-3; revise publication dates; enhance clarity and coherence in Vietnamese and English versions; adjust table of contents for published status.

--- a/pages/writing-opinion/values-creation/contents-vn.html
+++ b/pages/writing-opinion/values-creation/contents-vn.html
@@ -154,9 +154,9 @@
                 <h2 class="main-point">Phần III: Xây Dựng Năng Lực</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        5. Sức Khỏe Và Sự Minh Mẫn Của Tâm Trí
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="5-health-and-clarity-of-mind-vn.html">5. Sức Khỏe Và Sự Minh Mẫn Của Tâm Trí</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
                         <li>Sức khỏe thể chất</li>
