--- a/pages/writing-opinion/values-creation/contents.html
+++ b/pages/writing-opinion/values-creation/contents.html
@@ -154,9 +154,9 @@
                 <h2 class="main-point">Part III: Building Capacity</h2>
                 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        5. Health and Clarity of Mind
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="5-health-and-clarity-of-mind.html">5. Health and Clarity of Mind</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
                         <li>Physical Health</li>
