--- a/pages/writing-opinion/values-creation/temp.html
+++ b/pages/writing-opinion/values-creation/temp.html
@@ -90,6 +90,4 @@ Aristotle
 39. Tức giận là đáng khen ngợi nếu bạn có thể làm được như sau: ở đúng nơi, dùng cho đúng đối tượng, đúng thời điểm và đúng lý do.
 
 
-- Lời nói đầu
-  - Tôi đưa ta ví dụ dẫn chứng của một tư tưởng triết học của một ai đó thì không hẳn tôi hoàn toàn ủng hộ toàn bộ tư tưởng, chỉ là họ có ý mà tôi thích và nó bổ sung cho tư tưởng tôi trình bày
-  - Những gì tôi viết ở đây là những kiến thức hầu như đã được biết tới, chỉ có điều khác biệt là tôi thệ thống nó theo cách riêng của mình để làm phương hướng.
+- Con người tạo nên hoàn cảnh, chứ hoàn cảnh không nhào nặn nên con người.(Benjamin Disraeli)
