Add "Common Traps in Value Creation" section with content and navigation updates in English and Vietnamese; update table of contents for published status.

--- a/pages/writing-opinion/values-creation/contents-vn.html
+++ b/pages/writing-opinion/values-creation/contents-vn.html
@@ -166,15 +166,16 @@
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        6. Những Bẫy Phổ Biến Trong Tạo Ra Giá Trị
-                        <span class="status-badge status-planned">Đang Lên Kế Hoạch</span>
+                    <div class="toc-chapter-title">
+                        <a href="6-common-traps-in-value-creation-vn.html">6. Những Bẫy Phổ Biến Trong Tạo Ra Giá Trị</a>
+                        <span class="status-badge status-published">Đã Xuất Bản</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Thiên kiến nhận thức</li>
-                        <li>Ngụy biện logic</li>
-                        <li>Tư duy nhân quả</li>
-                        <li>Tư duy dài hạn vs ngắn hạn</li>
+                        <li>Dừng phản xạ, lắng nghe và trì hoãn phán xét</li>
+                        <li>Đặt câu hỏi, phản biện giả định và nhận diện thiên kiến</li>
+                        <li>Trí tuệ dẫn dắt hành động để tránh hệ quả sai lầm</li>
+                        <li>Học từ sai lầm và phòng ngừa sai lầm sớm</li>
+                        <li>Tôn trọng bối cảnh và kiên nhẫn trước quyết định</li>
                     </ul>
                 </div>
 
