--- a/pages/writing-opinion/values-creation/contents.html
+++ b/pages/writing-opinion/values-creation/contents.html
@@ -166,15 +166,16 @@
                 </div>
 
                 <div class="toc-chapter">
-                    <div class="toc-chapter-title coming-soon">
-                        6. Common Traps in Value Creation
-                        <span class="status-badge status-planned">Planned</span>
+                    <div class="toc-chapter-title">
+                        <a href="6-common-traps-in-value-creation.html">6. Common Traps in Value Creation</a>
+                        <span class="status-badge status-published">Published</span>
                     </div>
                     <ul class="toc-subsections">
-                        <li>Cognitive Biases</li>
-                        <li>Logical Fallacies</li>
-                        <li>Cause-effect thinking</li>
-                        <li>Long-term vs short-term thinking</li>
+                        <li>Pause reactions, listen, and defer judgment</li>
+                        <li>Question assumptions and surface biases</li>
+                        <li>Let wisdom guide action to avoid harmful outcomes</li>
+                        <li>Learn from mistakes and prevent them early</li>
+                        <li>Respect context and practice patience before deciding</li>
                     </ul>
                 </div>
 
