Update "Kỹ Năng 5" section with content and title change in Vietnamese

--- a/pages/writing-opinion/values-creation/7-0-core-skills-building-vn.html
+++ b/pages/writing-opinion/values-creation/7-0-core-skills-building-vn.html
@@ -34,8 +34,8 @@
 				<p>Từ đó, một câu hỏi được đặt ra: liệu giá trị mà con người mong muốn tạo ra có thể được hình thành theo một cơ chế tương tự hay không? Về bản chất, câu trả lời là không. Con người không phải là một hệ thống tự động thuần túy, và giá trị không thể sinh ra nếu thiếu ý thức và lựa chọn. Tuy nhiên, con người vẫn có thể tạo ra một trạng thái gần giống với sự “tự động” ấy. Trạng thái đó được gọi là thói quen.</p>
 			</div>
 			<div class="sub-section">
-				<h3 class="sub-point-1">Kỹ năng 5 - Biết đủ</h3>
-				<p></p>
+				<h3 class="sub-point-1">Kỹ năng 5 - Biết</h3>
+				<p>Từ thuở rất nhỏ, tôi đã nghe đâu đó câu nói: “Khôn cũng chết, dại cũng chết, biết thì sống.” Khi ấy, tôi chưa thực sự hiểu hết ý nghĩa của nó. Chỉ đến khi trải qua đủ những va chạm của đời sống, tôi mới dần nhận ra rằng câu nói ấy không bàn về sự thông minh hay ngu dốt theo nghĩa thông thường, mà nói về một tầng nhận thức sâu hơn — sự “biết”.</p>
 			</div>
 			<div class="sub-section">
 				<h3 class="sub-point-1">Tổng kết</h3>
