Summary core skills building

--- a/pages/writing-opinion/values-creation/7-1-core-skills-building-skill-1-vn.html
+++ b/pages/writing-opinion/values-creation/7-1-core-skills-building-skill-1-vn.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Kỹ Năng 1 - Khả Năng Học Hỏi Và Tự Học - My Personal Planet</title>
+    <title>Kỹ Năng 1 - Khả Năng Học Hỏi Và Tự Học</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
