Những Cạm Bẫy Thường Gặp Trong Việc Tạo Ra Giá Trị - Cạm Bẫy Tam Đoạn Luận

--- a/pages/writing-opinion/values-creation/6-2-1-common-traps-in-value-creation-common-traps-1-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-1-common-traps-in-value-creation-common-traps-1-vn.html
@@ -46,12 +46,41 @@
 				<i>Kết luận:</i> Chim cánh cụt biết bay.
 			</p>
 			<p>Về mặt hình thức, lập luận trên tuân thủ đầy đủ cấu trúc của một tam đoạn luận. Tiểu tiền đề rõ ràng nằm trong phạm vi mà đại tiền đề đề cập, và kết luận được rút ra một cách nhất quán về mặt logic.</p>
-			<p>Tuy nhiên, sai lầm của lập luận này không nằm ở cấu trúc suy luận, mà nằm ở đại tiền đề. Mệnh đề “chim thì biết bay” chỉ đúng trong phần lớn các trường hợp, nhưng không đúng với tất cả các loài chim. Đại tiền đề đã khái quát hóa quá mức, coi một đặc điểm phổ biến là đặc điểm phổ quát.</p>
+			<p>Tuy nhiên, sai lầm của lập luận này không nằm ở cấu trúc suy luận, mà nằm ở đại tiền đề. Mệnh đề “Tất cả các loài chim đều biết bay.” chỉ đúng trong phần lớn các trường hợp, nhưng không đúng với tất cả các loài chim. Đại tiền đề đã khái quát hóa quá mức, coi một đặc điểm phổ biến là đặc điểm phổ quát.</p>
 			<p>Trên thực tế, chim cánh cụt không phải là ngoại lệ duy nhất. Một số loài chim sống trên mặt đất, chẳng hạn như chim kiwi, cũng không có khả năng bay. Dù vẫn có cánh, nhưng cấu trúc cơ ngực của chúng kém phát triển, không đủ để tạo lực nâng. Thay vì thích nghi với việc bay lượn, chúng tiến hóa theo hướng khác: dựa nhiều vào khứu giác và xúc giác để tìm kiếm thức ăn, chủ yếu hoạt động vào ban đêm.</p>
 			<p>Sự tồn tại của những ngoại lệ này cho thấy rằng vấn đề không nằm ở việc lập luận thiếu logic, mà ở chỗ đại tiền đề đã đơn giản hóa thực tại phức tạp hơn nó tưởng. Khi một mệnh đề được phát biểu như thể không có ngoại lệ, trong khi thực tế lại có, tam đoạn luận—dù đúng về hình thức—vẫn có thể dẫn đến một kết luận sai.</p>
 			<p>Khi một đại tiền đề không phản ánh đầy đủ phạm vi của đối tượng mà nó bao trùm, mọi kết luận rút ra từ đó—dù đúng về hình thức—đều trở nên sai về bản chất. Trong trường hợp này, chim cánh cụt là một ngoại lệ rõ ràng: nó là chim, nhưng không có khả năng bay.</p>
 			<p>Ví dụ này cho thấy một cạm bẫy phổ biến trong tư duy: sự vội vàng trong khái quát hóa. Khi ta chấp nhận một mệnh đề “có vẻ đúng” như một chân lý tuyệt đối, tam đoạn luận bắt đầu trở thành công cụ củng cố sai lầm, thay vì giúp ta tiến gần hơn đến sự thật.</p>
+			<p><b>Một ví dụ đời thường về sai ở Tiểu tiền đề</b></p>
+			<p>
+				<i>Đại tiền đề:</i> Những hành động vì lợi ích của tập thể là những hành động đúng đắn.<br>
+				<i>Tiểu tiền đề:</i> Quyết định này được đưa ra vì lợi ích của tập thể.<br>
+				<i>Kết luận:</i> Vì vậy, quyết định này là đúng đắn.
+			</p>
+			<p>Thoạt nhìn, lập luận trên có vẻ rất khó phản bác. Đại tiền đề nghe hợp lý về mặt đạo đức, và kết luận được rút ra một cách mạch lạc. Chính vì vậy, nhiều người sẵn sàng chấp nhận kết luận mà không cảm thấy cần phải dừng lại để kiểm tra.</p>
+			<p>Tuy nhiên, vấn đề nằm ở tiểu tiền đề. Việc một quyết định được tuyên bố là “vì lợi ích của tập thể” không đồng nghĩa với việc nó thực sự phục vụ lợi ích ấy. Khái niệm “lợi ích của tập thể” ở đây có thể bị hiểu sai, bị diễn giải một chiều, hoặc thậm chí bị sử dụng như một nhãn dán đạo đức để che khuất những hệ quả tiêu cực đối với một nhóm người cụ thể.</p>
+			<p>Trong trường hợp này, đại tiền đề không nhất thiết sai. Sai lầm xuất hiện khi tiểu tiền đề được chấp nhận mà không được kiểm chứng: tập thể nào, lợi ích gì, trong ngắn hạn hay dài hạn, và cái giá phải trả được phân bổ ra sao. Khi những câu hỏi này chưa được làm rõ, tiểu tiền đề chỉ là một tuyên bố, không phải một thực tế đã được xác nhận.</p>
+			<p>Ví dụ này cho thấy một cạm bẫy quen thuộc trong đời sống xã hội: khi một nhãn đạo đức được gán lên một hành động, nó có thể khiến tư duy ngừng kiểm tra. Tam đoạn luận lúc này vẫn đúng về hình thức, nhưng kết luận lại được xây dựng trên một giả định chưa được chứng minh—và chính điều đó khiến những quyết định tưởng như đúng đắn có thể dẫn đến những hệ quả sai lầm.</p>
+			<p><b>Tam đoạn luận rút ngắn</b></p>
+			<p>Trong thực tế, con người hiếm khi trình bày đầy đủ một tam đoạn luận với cả ba thành phần. Khi một đại tiền đề được xem là quá quen thuộc, quá hiển nhiên, hoặc đã được mặc nhiên thừa nhận như một “chân lý”, nó thường bị lược bỏ trong quá trình suy luận. Kết quả là tam đoạn luận được rút ngắn, chỉ còn lại một mệnh đề mang dáng vẻ của một kết luận tự thân.</p>
+			<p>Trong những trường hợp như vậy, nhiệm vụ của tư duy không còn là kiểm tra kết luận, mà là truy ngược lại xem đại tiền đề ngầm định phía sau là gì. Chỉ khi làm rõ được tiền đề bị ẩn đi, ta mới có thể đánh giá liệu lập luận đó có thực sự vững vàng hay không.</p>
+			<p>Chẳng hạn, các ví dụ đã nêu ở trên có thể được rút gọn thành những phát biểu tưởng như độc lập sau:</p>
+			<p>
+				<i>Tôi sẽ phải chết.</i><br>
+				<i>Chim cánh cụt biết bay.</i><br>
+				<i>Quyết định này là đúng đắn vì nó vì lợi ích của tập thể.</i>
+			</p>
+			<p>Ở dạng rút ngắn này, lập luận không còn bộc lộ rõ cấu trúc suy luận của nó. Đại tiền đề bị che khuất, và kết luận được trình bày như một điều hiển nhiên, không cần giải thích thêm. Chính sự “hiển nhiên” ấy khiến người nghe hoặc người đọc dễ chấp nhận phát biểu mà không đặt câu hỏi: điều gì đã được giả định ở phía sau, và giả định đó có thực sự đúng hay không.</p>
+			<p>Tam đoạn luận rút ngắn, vì thế, không phải là một lỗi sai tự thân. Nó chỉ trở thành cạm bẫy khi ta quên mất rằng mỗi kết luận đều đứng trên một hoặc nhiều tiền đề, và những tiền đề ấy—dù bị ẩn đi—vẫn cần được soi xét cẩn trọng nếu ta muốn tư duy một cách tỉnh táo và có trách nhiệm.</p>
+			<p><b>Những phát biểu dưới đây thường được chấp nhận như hiển nhiên trong đời sống hằng ngày. Nhưng nếu dừng lại một nhịp, ta có thể thử soi chúng dưới cấu trúc của tam đoạn luận</b></p>
+			<p>
+				<i>“Chúng ta nên tin tưởng vào khoa học vì khoa học luôn đúng.”</i><br>
+				<i>“Mọi người đều xứng đáng có cơ hội thứ hai, vì ai cũng có thể mắc sai lầm.”</i><br>
+				<i>“Chúng ta phải bảo vệ môi trường vì đó là trách nhiệm của mỗi người.”</i><br>
+				Hãy thử phân tích các lý luận này dưới góc nhìn của tam đoạn luận. Xác định đại tiền đề và tiểu tiền đề ngầm định, sau đó đánh giá xem chúng có thực sự vững chắc hay không. Qua đó, bạn có thể rèn luyện khả năng tư duy phản biện và tránh rơi vào những cạm bẫy tinh vi trong việc tạo ra giá trị.
+			</p>
 		</section>
+
 	</article>
 
 	<!-- Link to external JavaScript file -->
