Refactor content structure and enhance clarity in core skills articles
- Updated HTML structure for "Kỹ Năng 3 - Tự Tạo Động Lực" to improve readability and organization, adding subheadings for better content segmentation.
- Revised "Kỹ Năng 4 - Hình Thành Thói Quen" for clearer presentation of ideas, including the addition of subheadings and rephrasing for conciseness.
- Enhanced "Kỹ Năng 5 - Biết" by restructuring content into distinct sections, emphasizing the importance of awareness and adaptability in skill development.
- Adjusted the SMART framework explanation for consistency in formatting and clarity, ensuring each component is clearly defined.

--- a/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1-vn.html
+++ b/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1-vn.html
@@ -106,11 +106,11 @@
 
             <p>SMART không phải là công thức thành công. SMART là kỷ luật tư duy.</p>
 
-            <p><b>S – Specific (Cụ thể)</b><br>Mục tiêu cần được diễn đạt đủ rõ để tránh tự diễn giải theo cảm xúc.</p>
-            <p><b>M – Measurable (Đo lường được)</b><br>Một mục tiêu không thể đo lường sẽ dễ kéo dài vô hạn.</p>
-            <p><b>A – Achievable (Khả thi)</b><br>Mục tiêu cần đòi hỏi nỗ lực nhưng vẫn nằm trong giới hạn có thể đạt được.</p>
-            <p><b>R – Relevant (Liên quan đến giá trị)</b><br>Mục tiêu không phục vụ giá trị sẽ chỉ khiến ta bận rộn hơn.</p>
-            <p><b>T – Time-bound (Có giới hạn thời gian)</b><br>Mục tiêu không có thời hạn sẽ luôn bị trì hoãn.</p>
+            <p><b>S - Specific (Cụ thể)</b><br>Mục tiêu cần được diễn đạt đủ rõ để tránh tự diễn giải theo cảm xúc.</p>
+            <p><b>M - Measurable (Đo lường được)</b><br>Một mục tiêu không thể đo lường sẽ dễ kéo dài vô hạn.</p>
+            <p><b>A - Achievable (Khả thi)</b><br>Mục tiêu cần đòi hỏi nỗ lực nhưng vẫn nằm trong giới hạn có thể đạt được.</p>
+            <p><b>R - Relevant (Liên quan đến giá trị)</b><br>Mục tiêu không phục vụ giá trị sẽ chỉ khiến ta bận rộn hơn.</p>
+            <p><b>T - Time-bound (Có giới hạn thời gian)</b><br>Mục tiêu không có thời hạn sẽ luôn bị trì hoãn.</p>
 
             <p>SMART không giúp ta chọn mục tiêu đúng; nó chỉ khiến ta không thể tự dối mình về mục tiêu đã chọn.</p>
         </div>
