Add settings.js for dynamic page metadata and update HTML files
- Introduced settings.js to manage page metadata dynamically, including title, description, author, and published date.
- Updated multiple HTML files to include the new settings.js script for consistent metadata display.
- Modified titles in several HTML files to include chapter numbers for better organization.
- Added new chapters on legacy, practical lessons, and accelerating progress to enhance content depth.
- Ensured all pages maintain a consistent structure and styling by linking to the new settings.js.

--- a/pages/writing-opinion/values-creation/0-introduction-vn.html
+++ b/pages/writing-opinion/values-creation/0-introduction-vn.html
@@ -16,9 +16,7 @@
 		</header>
 
 		<section class="content-section">
-			<p>Tôi viết những dòng này không phải vì tin rằng mình đã hiểu hết cuộc sống, mà bởi tôi ý thức rất rõ một điều: nhận thức, nếu không được giữ lại bằng chữ nghĩa, sẽ dần phai mờ, rồi biến mất như thể chưa từng tồn tại.</p>
-
-			<p>Tôi không chắc những điều tôi chia sẻ trong cuốn sách này có thể giúp ích được cho bao nhiêu người. Có thể với một số người, chúng sẽ không mới. Có thể với số khác, chúng chưa đủ sâu. Nhưng tôi tin rằng, ít nhất, đây sẽ là một bản hướng dẫn được viết ra bằng sự nghiêm túc và tâm huyết — một điều gì đó mà tôi có thể để lại cho con cháu mình trong tương lai, như một nền tảng để chúng hiểu rằng giá trị không tự nhiên mà có, và cuộc sống có ý nghĩa khi con người biết tạo ra giá trị cho người khác.</p>
+			<p>Tôi không chắc những điều tôi chia sẻ trong cuốn sách này có thể giúp ích được cho bao nhiêu người. Có thể với một số người, chúng sẽ không mới. Có thể với số khác, chúng chưa đủ sâu. Nhưng tôi tin rằng, ít nhất, đây sẽ là một bản hướng dẫn được viết ra bằng sự nghiêm túc và tâm huyết.</p>
 
 			<p>Những gì được trình bày ở đây không phải là công thức thành công, cũng không phải lời hứa về một cuộc sống dễ dàng. Đây là những nguyên lý nền tảng mà tôi tin rằng có thể áp dụng cho hầu hết mọi người — đặc biệt là những ai đang loay hoay, chưa có một hệ quy chiếu hay một hướng dẫn rõ ràng để xác định con đường mình muốn đi và mục tiêu mình muốn đạt tới trong cuộc sống.</p>
 
@@ -27,9 +25,14 @@
 			<p>Những điều tôi viết trong cuốn sách này, trên thực tế, phần lớn không phải là những tri thức mới mẻ. Nhiều ý tưởng đã được biết đến, được thảo luận và tồn tại từ lâu dưới những hình thức khác nhau. Điểm khác biệt, nếu có, nằm ở cách tôi hệ thống và sắp xếp chúng theo trải nghiệm và góc nhìn cá nhân—như một nỗ lực xây dựng một phương hướng tư duy nhất quán, đủ rõ ràng để chính tôi có thể dựa vào đó mà hành động và phản tỉnh. Tôi không đặt mục tiêu tạo ra một học thuyết mới, mà chỉ mong chia sẻ một cách tiếp cận có thể giúp người đọc tự tìm ra con đường phù hợp cho riêng mình.</p>
 
 			<p>Cuốn sách này, về bản chất, là một personal philosophy framework — không nhằm thay thế bất kỳ hệ tư tưởng nào, mà chỉ phản ánh cách tôi đã học cách nhìn, suy nghĩ và hành động trước câu hỏi về giá trị.</p>
+
+			<p style="text-align: right; margin-top: 3em; font-style: italic;">
+				Phù Du
+			</p>
 		</section>
 	</article>
 
+	<script src="settings.js"></script>
 	<script src="../../pages-scripts.js"></script>
 </body>
 </html>
