--- a/pages/writing-opinion/values-creation/0-introduction.html
+++ b/pages/writing-opinion/values-creation/0-introduction.html
@@ -29,7 +29,7 @@
 			<p>This book is, at its core, a personal philosophy framework—not intended to replace any doctrine, but simply to reflect how I have learned to see, think, and act in response to the question of value.</p>
 		</section>
 	</article>
-
+	<script src="settings.js"></script>
 	<script src="../../pages-scripts.js"></script>
 </body>
 </html>
