--- a/pages/writing-opinion/values-creation/2-why-we-must-create-value-vn.html
+++ b/pages/writing-opinion/values-creation/2-why-we-must-create-value-vn.html
@@ -87,7 +87,7 @@
         </div>
 	</section>
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
