--- a/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
+++ b/pages/writing-opinion/values-creation/4-sustainable-ethical-value-creation.html
@@ -60,7 +60,7 @@
 		</section>
 	</article>
 
-	<!-- Link to external JavaScript file -->
+	<script src="settings.js"></script>
 	<script src="../../pages-scripts.js"></script>
 </body>
 </html>
