--- a/pages/writing-opinion/values-creation/7-5-core-skills-building-skill-5-vn.html
+++ b/pages/writing-opinion/values-creation/7-5-core-skills-building-skill-5-vn.html
@@ -65,7 +65,7 @@
 
     </section>
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
