--- a/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1-vn.html
+++ b/pages/writing-opinion/values-creation/8-1-strategic-frameworks-1-vn.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Khung chiến lược - Thiết lập mục tiêu</title>
+    <title>8. Khung chiến lược - Thiết lập mục tiêu</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
 <article class="content-article">
 
     <header class="article-header">
-        <h1 class="page-title">Khung chiến lược - Thiết lập mục tiêu</h1>
+        <h1 class="page-title">8. Khung chiến lược - Thiết lập mục tiêu</h1>
         <p class="page-subtitle">Giá trị mục tiêu của ta là gì?</p>
         <p class="page-meta">
             Published:
@@ -118,7 +118,7 @@
     </section>
 
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
