--- a/pages/writing-opinion/values-creation/8-3-strategic-frameworks-3-vn.html
+++ b/pages/writing-opinion/values-creation/8-3-strategic-frameworks-3-vn.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>Khung chiến lược - Từ Chiến Lược Đến Hành Động</title>
+    <title>8. Khung chiến lược - Từ Chiến Lược Đến Hành Động</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 
     <!-- Page Header -->
     <header class="article-header">
-        <h1 class="page-title">Khung chiến lược - Từ Chiến Lược Đến Hành Động</h1>
+        <h1 class="page-title">8. Khung chiến lược - Từ Chiến Lược Đến Hành Động</h1>
         <p class="page-subtitle">Khi lựa chọn đúng chưa đủ để tạo ra giá trị</p>
         <p class="page-meta">
             Published:
@@ -93,6 +93,15 @@
     <!-- Section 3 -->
     <section class="content-section">
         <h2 class="main-point">Các Công Cụ Hỗ Trợ Lựa Chọn Và Triển Khai Hành Động</h2>
+        <p class="intro-text">
+            Các công cụ dưới đây không được đưa ra để áp dụng đồng loạt,
+            cũng không nhằm tạo ra cảm giác “đã có đủ phương pháp”.
+            Chúng tồn tại như những điểm tựa thực hành,
+            giúp chuyển lựa chọn chiến lược thành hành động cụ thể
+            trong những bối cảnh khác nhau.
+            Việc quan trọng không nằm ở số công cụ được sử dụng,
+            mà ở khả năng chọn đúng công cụ cho đúng vấn đề tại đúng thời điểm.
+        </p>
 
         <div class="sub-section">
             <h3 class="sub-point-1">Ma trận Tác động - Nỗ lực (Impact - Effort)</h3>
@@ -165,30 +174,105 @@
             </ul>
             <p><strong>Sai lầm thường gặp:</strong> Xem review như báo cáo thành tích.</p>
         </div>
+
         <p>
             Chiến lược chỉ thực sự bắt đầu có giá trị khi nó được chuyển hóa thành
-            <b>hành động cụ thể</b>.
+            <b>những bước đi cụ thể</b>.
             Những nguyên tắc và công cụ trong chương này không nhằm giúp ta làm nhiều hơn,
-            mà giúp <b>lựa chọn đúng hành động cần thực hiện, vào đúng thời điểm, với mức
+            mà giúp <b>lựa chọn đúng việc cần thực hiện, vào đúng thời điểm, với mức
             nỗ lực hợp lý</b>.
-            Khi hành động được xác định rõ và được triển khai có chủ đích, việc thực thi
-            không còn phụ thuộc quá nhiều vào cảm hứng hay ý chí nhất thời.
+            Khi các bước triển khai được xác định rõ và thực hiện có chủ đích,
+            quá trình thực thi không còn phụ thuộc quá nhiều vào cảm hứng hay ý chí nhất thời.
         </p>
 
         <p>
-            Tuy nhiên, <b>hành động đơn lẻ</b> chỉ tạo ra kết quả rời rạc.
-            Giá trị chỉ được tích lũy khi các hành động được
-            <b>tổ chức thành một cơ chế thực thi ổn định</b>,
+            Tuy nhiên, <b>những nỗ lực rời rạc</b> chỉ tạo ra kết quả ngắn hạn.
+            Giá trị chỉ thực sự được tích lũy khi các việc cần làm
+            <b>được tổ chức thành một cơ chế thực thi ổn định</b>,
             có khả năng duy trì, điều chỉnh và tự hiệu chỉnh theo thời gian.
-            Từ đây, trọng tâm không còn nằm ở việc <b>“làm gì tiếp theo”</b>,
-            mà là <b>xây dựng một hệ thống đủ tốt để những hành động đúng
-            có thể tiếp diễn một cách nhất quán</b>.
+            Từ đây, trọng tâm không còn nằm ở câu hỏi <b>“làm gì tiếp theo”</b>,
+            mà là <b>xây dựng một hệ thống đủ tốt để các lựa chọn đúng
+            có thể được lặp lại một cách nhất quán</b>.
         </p>
 
     </section>
 
-</article>
+    <!-- Section 4: Growth Tools (Added) -->
+    <section class="content-section">
+        <h2 class="main-point">Những Công Cụ Để Chiến Lược Không Đứng Yên</h2>
 
+        <p class="intro-text">
+            Chiến lược không phải là một bản thiết kế bất biến, mà là một giả thuyết sống.
+            Khi nó được đưa vào hành động, nó sẽ va chạm với thực tế, và thực tế luôn tạo ra
+            độ lệch. Những công cụ dưới đây không thay thế tư duy, nhưng giúp tư duy được
+            kiểm chứng, được điều chỉnh, và được nuôi dưỡng theo thời gian.
+        </p>
+
+        <div class="sub-section">
+            <h3 class="sub-point-1">PDCA - Chu trình học hỏi từ hành động</h3>
+            <p><strong>Dùng khi nào:</strong> Khi bạn cần một cơ chế cải tiến liên tục, đặc biệt trong bối cảnh còn nhiều bất định.</p>
+            <p><strong>Mục đích:</strong> Biến hành động thành dữ liệu để giảm sai lầm và học nhanh hơn.</p>
+            <p><strong>Cách sử dụng:</strong></p>
+            <ul class="outline-list">
+                <li><strong>Plan:</strong> xác định giả định và tiêu chí đánh giá (thành công trông như thế nào)</li>
+                <li><strong>Do:</strong> triển khai trong phạm vi đủ nhỏ để kiểm soát rủi ro</li>
+                <li><strong>Check:</strong> quan sát kết quả, so với tiêu chí ban đầu, tránh ngụy biện</li>
+                <li><strong>Act:</strong> chuẩn hóa điều đúng, điều chỉnh điều sai, hoặc thay đổi giả định</li>
+            </ul>
+            <p><strong>Sai lầm thường gặp:</strong> Làm “Do” rất nhiều nhưng thiếu “Check” và “Act”, khiến bận rộn thay cho tiến bộ.</p>
+        </div>
+
+        <div class="sub-section">
+            <h3 class="sub-point-1">Five Dynamics of Growth - Khi tăng trưởng không chỉ là “làm nhiều hơn”</h3>
+             <p class="intro-text">
+                Khi một chiến lược chỉ vận hành được nhờ thúc ép liên tục,
+                đó thường không phải vấn đề của nỗ lực,
+                mà là dấu hiệu cho thấy một hoặc nhiều động lực nền tảng
+                trong hệ thống tăng trưởng đang thiếu hoặc lệch nhịp.
+            </p>
+            <p><strong>Dùng khi nào:</strong> Khi bạn muốn nhìn tăng trưởng như một hệ thống, thay vì một chuỗi nỗ lực rời rạc.</p>
+            <p><strong>Mục đích:</strong> Nhận diện các lực đẩy nền tảng giúp chiến lược có “đà” và có “sức bền”.</p>
+            <p><strong>Cách sử dụng:</strong> Xem tăng trưởng như sự phối hợp giữa nhiều động lực cùng lúc, ví dụ:</p>
+            <ul class="outline-list">
+                <li><strong>Năng lực cốt lõi:</strong> ta thực sự làm tốt điều gì</li>
+                <li><strong>Hệ thống hỗ trợ:</strong> quy trình, công cụ, môi trường giúp duy trì chất lượng</li>
+                <li><strong>Con người:</strong> năng lực, động cơ, và sự gắn kết</li>
+                <li><strong>Văn hóa học hỏi:</strong> khả năng phản tỉnh, trao đổi, và cải tiến</li>
+                <li><strong>Thích nghi:</strong> khả năng đổi hướng khi bối cảnh thay đổi</li>
+            </ul>
+            <p><strong>Sai lầm thường gặp:</strong> Tối ưu một động lực (thường là hiệu suất ngắn hạn) nhưng làm suy yếu các động lực còn lại.</p>
+        </div>
+
+        <div class="sub-section">
+            <h3 class="sub-point-1">The Three-Box Solution - Quản trị hiện tại, buông bỏ quá khứ, kiến tạo tương lai</h3>
+            <p><strong>Dùng khi nào:</strong> Khi bạn (hoặc tổ chức) làm tốt việc hiện tại nhưng khó tạo ra bước nhảy cho tương lai.</p>
+            <p><strong>Mục đích:</strong> Tổ chức sự chú ý và nguồn lực theo ba “không gian” phải tồn tại song song.</p>
+            <p><strong>Cách sử dụng:</strong></p>
+            <ul class="outline-list">
+                <li><strong>Box 1 - Tối ưu hiện tại:</strong> củng cố điều đang tạo ra giá trị hôm nay</li>
+                <li><strong>Box 2 - Thoát khỏi quá khứ:</strong> chủ động từ bỏ những thứ từng đúng nhưng không còn phù hợp</li>
+                <li><strong>Box 3 - Xây dựng tương lai:</strong> đầu tư cho những thứ chưa có kết quả ngay, nhưng cần thời gian để thành hình</li>
+            </ul>
+            <p><strong>Sai lầm thường gặp:</strong> Chỉ sống trong Box 1 quá lâu, rồi gọi đó là “tập trung”.</p>
+        </div>
+
+        <p>
+            Nếu các công cụ ở phần trước giúp ta <b>chọn đúng việc để làm</b>, thì các công cụ ở phần này giúp ta
+            <b>không đứng yên trong chính lựa chọn của mình</b>.
+            Bởi trong thực tế, điều làm nên khác biệt không hẳn là “đúng ngay từ đầu”, mà là
+            <b>khả năng tự hiệu chỉnh</b> khi thực tế trả về phản hồi.
+        </p>
+
+        <p>
+            Chiến lược, vì thế, không chỉ là một điểm đến được vẽ ra trước.
+            Nó là một quá trình trưởng thành: vừa đi, vừa học, vừa gỡ bỏ, vừa xây mới.
+            Và khi hành động đã được tổ chức thành một cơ chế học hỏi, giá trị bắt đầu tích lũy
+            không còn phụ thuộc quá nhiều vào cảm hứng, mà dựa trên <b>nhịp cải tiến đều đặn</b>.
+        </p>
+    </section>
+
+</article>
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
