--- a/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value-vn.html
+++ b/pages/writing-opinion/values-creation/1-understanding-the-nature-of-value-vn.html
@@ -86,7 +86,7 @@
 
     </section>
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
