--- a/pages/writing-opinion/values-creation/2-why-we-must-create-value.html
+++ b/pages/writing-opinion/values-creation/2-why-we-must-create-value.html
@@ -45,7 +45,7 @@
 		</section>
 	</article>
 
-	<!-- Link to external JavaScript file -->
+	<script src="settings.js"></script>
 	<script src="../../pages-scripts.js"></script>
 </body>
 </html>
