--- a/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind-vn.html
+++ b/pages/writing-opinion/values-creation/5-health-and-clarity-of-mind-vn.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 	<meta charset="UTF-8">
-	<title>5. Sức Khỏe Và Sự Minh Mẫn Của Tâm Trí - My Personal Planet</title>
+	<title>5. Sức Khỏe Và Sự Minh Mẫn Của Tâm Trí</title>
 	<link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
@@ -93,7 +93,7 @@
 		</div>
 	</section>
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
