--- a/pages/writing-opinion/values-creation/6-1-common-traps-in-value-creation-foundation-vn.html
+++ b/pages/writing-opinion/values-creation/6-1-common-traps-in-value-creation-foundation-vn.html
@@ -142,7 +142,7 @@
 
 	</section>
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
