--- a/pages/writing-opinion/values-creation/6-2-6-common-traps-in-value-creation-common-traps-6-vn.html
+++ b/pages/writing-opinion/values-creation/6-2-6-common-traps-in-value-creation-common-traps-6-vn.html
@@ -57,7 +57,7 @@
 
 	</section>
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
