--- a/pages/writing-opinion/values-creation/6-common-traps-in-value-creation.html
+++ b/pages/writing-opinion/values-creation/6-common-traps-in-value-creation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>6. Common Traps in Value Creation - My Personal Planet</title>
+    <title>6. Common Traps in Value Creation</title>
     <link rel="stylesheet" href="../../pages-styles.css">
 </head>
 <body>
@@ -47,7 +47,7 @@
         </section>
     </article>
 
-    <!-- Link to external JavaScript file -->
+    <script src="settings.js"></script>
     <script src="../../pages-scripts.js"></script>
 </body>
 </html>
