--- a/pages/writing-opinion/values-creation/7-0-core-skills-building-vn.html
+++ b/pages/writing-opinion/values-creation/7-0-core-skills-building-vn.html
@@ -50,7 +50,7 @@
 			</div>
 		</section>
 	</article>
-	<!-- Link to external JavaScript file -->
+	<script src="settings.js"></script>
     <script src="../../pages-scripts.js"></script>
 </body>
 </html>
