--- a/pages/writing-opinion/values-creation/7-4-core-skills-building-skill-4-vn.html
+++ b/pages/writing-opinion/values-creation/7-4-core-skills-building-skill-4-vn.html
@@ -74,7 +74,7 @@
 
     </section>
 </article>
-
+<script src="settings.js"></script>
 <script src="../../pages-scripts.js"></script>
 </body>
 </html>
